css/styles.css
/* ... */
.options-list-opt:hover, .canvas-list-opt:hover, .settings-list-opt:hover, #saveAs ul li:hover, .rotateOptions li:hover{
	background: #d2d2d2;
}

.subMenu{
	display: none;
	position: absolute;
	list-style: none;
    background: #e8e6e6;
    box-shadow: 0px 15px 39px 2px #bbbaba;
}

.saveOptions{
    top: 64px;
    left: 115px;
    width: 80px;
}

.rotateOptions{
    top: 64px;
    left: 130px;
    width: 115px;
}

.rotateOptions li{
	padding: 8px;
}

.showSaveOps, .showRotateOps{
	display: block;
}

#saveAs ul li{
	padding: 8px;
}

#btnFullScreenPreview {
	content: url('../img/fullscreen.png');
	width: 30px;
}

.grid{
	display: none;
	position: absolute;
    width: inherit;
    height: inherit;
    top: 0px;
}

#canvas-setup, #aspect-ratio-size, #setCanvasColor{
	width: 150px;
}

.aspect-ratio-opt{
	display: none;
}

.aspect-ratio-show{
	display: table-row;
}

.custom-opt-hide{
	display: none;
}

.activeToolNotificationBar{
	display: none;
    width: 0px;
    height: 50px;
    background: #c3c3c3;
    position: absolute;
    bottom: 10px;
    right: 0;
    opacity: 0.9;
    transition: .325s;
    box-shadow: 6px 3px 75px -11px black;
}

.toggleNotification{
	width: 260px;
	transition: .325s;
}

.activeToolContainer{
	text-align: center;
    margin-top: -32px;
    margin-left: 35px;
}

.activeToolShow{
	display: block;
}

.activeToolNotificationBar img{
	text-align: unset;
	margin-top: unset;
	margin-left: unset;
	width: 50px;
	height: 100%;
}

#canvas-size {
	display: none;
	background: black;
	color: white;
    position: absolute;
    right: 0;
    top: 30px;
    font-size: 16px;
    font-weight: 100;
    padding: 5px;
}

.resizeHintBar {
	position: absolute;
    bottom: 0;
    width: 100%;
    text-align: center;
    background: #1b77bf;
    color: white;
    padding: 10px 0px;
    font-size: 14px;
    display: none;
}

.resizeHintBar img {
	width: 12px;
}

#saveNotificationBar {
	display: none;
	position: absolute;
    top: 40px;
    right: 0;
    padding: 10px;
    background: #4CAF50;
    color: white;
    font-size: 15px;
    box-shadow: 0px 0px 38px -12px black;
}

#saveNotificationBar span{
	margin-left: 15px;
    font-size: 20px;
    color: white;
}

#saveNotificationBar span:hover {
	cursor: pointer;
}

#saveNotificationBar div {
	margin-top: 5px;
	text-decoration: underline;
}

#saveNotificationBar div:hover{
	cursor: pointer;
}

#main-sketch, #tmp_canvas {
    /**/-moz-transform:scale(1,1);-webkit-transform:scale(1,1);
    transform:scale(1,1);
    /**/-webkit-/*transition:all 600ms ease;-webkit-transition:all 600ms ease;
    transition:all 600ms ease; */
}

#main-sketch[flipped] {
    /**/-moz-transform:scale(-1,1);-webkit-transform:scale(-1,1);
    transform:scale(-1,1);
}

#main-sketch[flippedVert] {
    /**/-moz-transform:scale(1,-1);-webkit-transform:scale(-1,1);
    transform:scale(1,-1);
}

.event-logs-container{
	display: none;
	overflow-y: auto;
	position: absolute;
    top: 30px;
    right: 0;
    background: #121212;
    color: white;
    padding: 20px;
    width: 250px;
    height: 200px;
    box-shadow: 3px 16px 100px 0px black;
    border-bottom-left-radius: 5px;
}

.event-logs-container div{
	text-align: center;
    margin-top: 60px;
    font-size: 14px;
}

.event-logs-container div img{
	width: 35px;
    display: block;
    margin: auto;
    margin-bottom: 10px;
}

.showHistory {
	display: block;
}

.event-logs-container ul{
	list-style: none;
}

.event-logs-container ul li:first-child{
	margin-top: -5px;
}

.event-logs-container ul li{
	background: #212121;
    height: 50px;
    padding-left: 10px;
    border: 1px solid #444;
    font-size: 14px;
    margin-top: 7px;
}

.event-logs-container ul li img{
	border-radius: 50%;
	width: 30px;
	position: relative;
    top: 10px;
}

#toggleHistory{
	float: right;
}

#toggleHistory img{
	width: 10px;
}

.event-logs-container::-webkit-scrollbar-track{
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	background-color: #F5F5F5;
}

.event-logs-container::-webkit-scrollbar{
	width: 12px;
	background-color: #F5F5F5;
}

.event-logs-container::-webkit-scrollbar-thumb{
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
	background-color: #555;
}

